--- a/songs.html
+++ b/songs.html
@@ -2,27 +2,26 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>เลือกเพลง YouTube</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>เลือกเพลงที่ต้องการฟัง</h1>
+  <div class="background"></div>
+  <main>
+    <h1>เลือกเพลงที่ต้องการฟัง</h1>
+    <button onclick="loadVideo('Jl2GVV5OYfY')">ถ้าคิดถึงเธอมากกว่านี้ x Pimthitiii</button>
+    <button onclick="loadVideo('yqpmX4eOCHo')">หมากเกมนี้ - อินคา</button>
+    <button onclick="loadVideo('HtsXPgf830k')">苏慕遮</button>
+    <button onclick="loadVideo('nNZ5C30d6EE')">Aunchi | เมดเลย์อกหัก</button>
+    <button onclick="loadVideo('VRVFAHidHm8')">Aunchi | เมดเลย์อกหัก EP.2</button>
 
-  <button onclick="loadVideo('Jl2GVV5OYfY')">ถ้าคิดถึงเธอมากกว่านี้ x Pimthitiii</button>
-  <button onclick="loadVideo('yqpmX4eOCHo')">หมากเกมนี้ - อินคา [Cover By สมอารมณ์ x Pimthitiii]</button>
-  <button onclick="loadVideo('HtsXPgf830k')">苏慕遮</button>
-  <button onclick="loadVideo('nNZ5C30d6EE')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก</button>
-  <button onclick="loadVideo('VRVFAHidHm8')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก(Rock) EP.2</button>
+    <div class="video-container">
+      <iframe id="ytPlayer" src="" allowfullscreen allow="autoplay"></iframe>
+    </div>
 
-  <div class="video-container">
-    <iframe id="ytPlayer" src="" allowfullscreen allow="autoplay"></iframe>
-  </div>
-
-  <!-- ปุ่มกลับหน้า index -->
-  <button class="back-btn" onclick="window.location.href='index.html'">
-    <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="กลับ" />
-  </button>
+    <button class="floating-btn left" onclick="window.location.href='index.html'">🏠</button>
+  </main>
 
   <script>
     function loadVideo(videoId) {
