--- a/average.html
+++ b/average.html
@@ -6,10 +6,46 @@
   <title>ผลลัพธ์ค่าเฉลี่ย</title>
   <link rel="stylesheet" href="style.css" />
   <script>
-    if (screen.orientation && screen.orientation.lock) {
-      screen.orientation.lock('landscape').catch(() => {});
-    }
+    window.addEventListener("load", () => {
+      if (screen.orientation && screen.orientation.lock) {
+        screen.orientation.lock('landscape').catch(() => {});
+      }
+    });
   </script>
+  <style>
+    #avgValue {
+      font-size: 2rem;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+    #imageContainer {
+      text-align: center;
+    }
+    #imageContainer img {
+      max-width: 300px;
+      margin-top: 20px;
+    }
+    #imageContainer p {
+      font-size: 1.2rem;
+      margin-top: 10px;
+    }
+    .floating-btn {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      padding: 12px 16px;
+      border-radius: 50%;
+      font-size: 1.5rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+      background-color: #28b999;
+      color: white;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+    }
+    .floating-btn:hover {
+      transform: scale(1.1);
+    }
+  </style>
 </head>
 <body>
   <div class="background"></div>
@@ -18,6 +54,9 @@
     <p id="avgValue"></p>
     <div id="imageContainer"></div>
   </main>
+
+  <!-- ปุ่มกลับหน้าแรก -->
+  <button onclick="window.location.href='index.html'" class="floating-btn">🏠</button>
 
   <script>
     const params = new URLSearchParams(window.location.search);
@@ -43,7 +82,6 @@
       caption.textContent = "ดีขึ้นให้ได้นะ";
     }
 
-    img.style.maxWidth = "300px";
     container.appendChild(img);
     container.appendChild(caption);
   </script>
