--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>คำนวณค่าเฉลี่ย</title>
+  <title>โปรแกรมคำนวนค่าเฉลี่ย Order Picker</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
 
   <div class="content-wrapper">
     <main>
-      <h1>คำนวณค่าเฉลี่ย</h1>
+      <h1>โปรแกรมคำนวนค่าเฉลี่ย Order Picker</h1>
       <form id="averageForm">
         <input type="number" id="sku" placeholder="SKU" required />
         <input type="number" id="mu" placeholder="MU" required />
