--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="content-wrapper">
     <main>
-      <h1>โปรแกรมคำนวนค่าเฉลี่ย Order Picker</h1>
+      <h1 class="title-no-wrap">โปรแกรมคำนวนค่าเฉลี่ย Order Picker</h1>
       <form id="averageForm">
         <input type="number" id="sku" placeholder="SKU" required />
         <input type="number" id="mu" placeholder="MU" required />
@@ -22,8 +22,13 @@
 
     <footer>
       <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย</p>
+      <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้อย่างรวดเร็วและสะดวกสบาย</p>
+      <p>ตัวเว็บออกแบบ UI ให้ดูทันสมัย ใช้งานง่าย สีสันสบายตา และตอบโจทย์การใช้งานจริง</p>
+      <p>โค้ดถูกเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไวและทำงานได้บนทุกอุปกรณ์ รวมถึงฟีเจอร์เปิดเต็มจอ เพื่อเพิ่มความชัดเจนในการแสดงผล และการเข้าถึงข้อมูลอย่างรวดเร็ว</p>
       <p>พัฒนาโดย Jack Makro © 2025</p>
-      <p>ติดต่อ: P'Jack OCS Lock 12</p>
+      <p>ทีมงานผู้ดูแลระบบ: Jack Makro, Team Dev RoshanzeroX</p>
+      <p>ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้</p>
+      <p>หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12</p>
     </footer>
   </div>
 
