--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="background"></div>
 
-  <div class="content-wrapper">
+  <div class="content-wrapper fade-slide-in">
     <main>
       <h1 class="title-no-wrap">โปรแกรมคำนวนค่าเฉลี่ย Order Picker</h1>
       <form id="averageForm">
