--- a/index.html
+++ b/index.html
@@ -7,33 +7,36 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="background"></div>
+  <div class="background-blur"></div>
+  <main>
+    <h1>โปรแกรมคำนวนค่าเฉลี่ย Order Picker</h1>
+    <form id="calcForm" action="average.html" method="GET">
+      <label for="sku">SKU</label>
+      <input type="number" id="sku" name="sku" required />
 
-  <div class="content-wrapper fade-slide-in">
-    <main>
-      <h1 class="title-no-wrap">โปรแกรมคำนวนค่าเฉลี่ย Order Picker</h1>
-      <form id="averageForm">
-        <input type="number" id="sku" placeholder="SKU" required />
-        <input type="number" id="mu" placeholder="MU" required />
-        <input type="number" id="days" placeholder="จำนวนวันทำงาน" required />
-        <button type="submit">คำนวณค่าเฉลี่ย</button>
-      </form>
-    </main>
+      <label for="mu">MU</label>
+      <input type="number" id="mu" name="mu" required />
 
-    <footer>
-      <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย</p>
-      <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้อย่างรวดเร็วและสะดวกสบาย</p>
-      <p>ตัวเว็บออกแบบ UI ให้ดูทันสมัย ใช้งานง่าย สีสันสบายตา และตอบโจทย์การใช้งานจริง</p>
-      <p>โค้ดถูกเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไวและทำงานได้บนทุกอุปกรณ์ รวมถึงฟีเจอร์เปิดเต็มจอ เพื่อเพิ่มความชัดเจนในการแสดงผล และการเข้าถึงข้อมูลอย่างรวดเร็ว</p>
-      <p>พัฒนาโดย Jack Makro © 2025</p>
-      <p>ทีมงานผู้ดูแลระบบ: Jack Makro, Team Dev RoshanzeroX</p>
-      <p>ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้</p>
-      <p>หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12</p>
-    </footer>
-  </div>
+      <label for="days">จำนวนวันทำงาน</label>
+      <input type="number" id="days" name="days" required />
 
-  <button id="duckButton" class="floating-button left">🦆</button>
-  <button id="fullscreenButton" class="floating-button right">📱</button>
+      <button type="submit">คำนวณค่าเฉลี่ย</button>
+    </form>
+  </main>
+
+  <button id="btnSongs" class="floating-btn left">🦆</button>
+  <button id="btnFullscreen" class="floating-btn right">📱</button>
+
+  <footer>
+    <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย</p>
+    <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้อย่างรวดเร็วและสะดวกสบาย</p>
+    <p>ตัวเว็บออกแบบ UI ให้ดูทันสมัย ใช้งานง่าย สีสันสบายตา และตอบโจทย์การใช้งานจริง</p>
+    <p>โค้ดถูกเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไวและทำงานได้บนทุกอุปกรณ์ รวมถึงฟีเจอร์เปิดเต็มจอ เพื่อเพิ่มความชัดเจนในการแสดงผล และการเข้าถึงข้อมูลอย่างรวดเร็ว</p>
+    <p>พัฒนาโดย Jack Makro © 2025</p>
+    <p>ทีมงานผู้ดูแลระบบ: Jack Makro, Team Dev RoshanzeroX</p>
+    <p>ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้</p>
+    <p>หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
