--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="content-wrapper fade-slide-in">
     <main>
       <h1 class="title-no-wrap">โปรแกรมคำนวนค่าเฉลี่ย Order Picker</h1>
-      <form id="averageForm" class="modern-form">
+      <form id="averageForm">
         <input type="number" id="sku" placeholder="SKU" required />
         <input type="number" id="mu" placeholder="MU" required />
         <input type="number" id="days" placeholder="จำนวนวันทำงาน" required />
