--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>โปรแกรมคำนวนค่าเฉลี่ย Order Picker</title>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="background"></div>
@@ -15,7 +13,7 @@
   <div class="content-wrapper fade-slide-in">
     <main>
       <h1 class="title-no-wrap">โปรแกรมคำนวนค่าเฉลี่ย Order Picker</h1>
-      <form id="averageForm">
+      <form id="averageForm" class="centered-form">
         <input type="number" id="sku" placeholder="SKU" required />
         <input type="number" id="mu" placeholder="MU" required />
         <input type="number" id="days" placeholder="จำนวนวันทำงาน" required />
