--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>โปรแกรมคำนวนค่าเฉลี่ย Order Picker</title>
-  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>โปรแกรมคำนวนค่าเฉลี่ย Order Picker</title>
+<link href="https://fonts.googleapis.com/css2?family=Kanit&family=Sarabun&family=Noto+Sans+Thai&display=swap" rel="stylesheet" />
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="background"></div>
@@ -36,6 +36,6 @@
   <button id="duckButton" class="floating-button left">🦆</button>
   <button id="fullscreenButton" class="floating-button right">📱</button>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
