--- a/index.html
+++ b/index.html
@@ -1,41 +1,32 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>โปรแกรมคำนวนค่าเฉลี่ย Order Picker</title>
-<link href="https://fonts.googleapis.com/css2?family=Kanit&family=Sarabun&family=Noto+Sans+Thai&display=swap" rel="stylesheet" />
-<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>เว็บฟอร์มคำนวณ</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="background"></div>
 
-  <div class="content-wrapper fade-slide-in">
-    <main>
-      <h1 class="title-no-wrap">โปรแกรมคำนวนค่าเฉลี่ย Order Picker</h1>
-      <form id="averageForm" class="centered-form">
-        <input type="number" id="sku" placeholder="SKU" required />
-        <input type="number" id="mu" placeholder="MU" required />
-        <input type="number" id="days" placeholder="จำนวนวันทำงาน" required />
-        <button type="submit">คำนวณค่าเฉลี่ย</button>
-      </form>
-    </main>
+  <div class="content-wrapper">
+    <h1 class="title-no-wrap">ฟอร์มคำนวณ</h1>
+
+    <form class="centered-form" id="calc-form">
+      <input type="text" id="sku" name="sku" placeholder="SKU" required />
+      <input type="number" id="mu" name="mu" placeholder="MU" min="0" required />
+      <input type="number" id="days" name="days" placeholder="Days" min="0" required />
+      <button type="submit">คำนวณ</button>
+    </form>
 
     <footer>
-      <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย</p>
-      <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้อย่างรวดเร็วและสะดวกสบาย</p>
-      <p>ตัวเว็บออกแบบ UI ให้ดูทันสมัย ใช้งานง่าย สีสันสบายตา และตอบโจทย์การใช้งานจริง</p>
-      <p>โค้ดถูกเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไวและทำงานได้บนทุกอุปกรณ์ รวมถึงฟีเจอร์เปิดเต็มจอ เพื่อเพิ่มความชัดเจนในการแสดงผล และการเข้าถึงข้อมูลอย่างรวดเร็ว</p>
-      <p>พัฒนาโดย Jack Makro © 2025</p>
-      <p>ทีมงานผู้ดูแลระบบ: Jack Makro, Team Dev RoshanzeroX</p>
-      <p>ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้</p>
-      <p>หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12</p>
+      <p>ลิขสิทธิ์ &copy; 2025 เว็บของฉัน</p>
     </footer>
   </div>
 
-  <button id="duckButton" class="floating-button left">🦆</button>
-  <button id="fullscreenButton" class="floating-button right">📱</button>
+  <button class="floating-button left" id="duck-btn" title="เพลง">🦆</button>
+  <button class="floating-button right" id="fullscreen-btn" title="เต็มจอ">⛶</button>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
