--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>โปรแกรมคำนวนค่าเฉลี่ย Order Picker</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Google Font Kanit -->
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div class="background"></div>
