--- a/average.html
+++ b/average.html
@@ -7,14 +7,17 @@
   <link rel="stylesheet" href="average-style.css" />
 </head>
 <body>
+  <div class="background"></div>
+
   <div class="container">
     <h1>ค่าเฉลี่ยของคุณคือ</h1>
+    <div id="averageValue" class="average-value"></div>
     <div id="resultSection" class="result-section">
       <!-- รูปและข้อความจะถูกแทรกที่นี่โดย JS -->
     </div>
   </div>
 
-  <button id="homeButton" class="floating-button left" aria-label="กลับหน้าแรก">🏠</button>
+  <button id="homeButton" class="floating-button right" aria-label="กลับหน้าแรก">🏠</button>
 
   <script src="average-script.js"></script>
 </body>
