--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </footer>
   </div>
 
-  <button id="duckButton" class="floating-button left">🦆</button>
-  <button id="fullscreenButton" class="floating-button right">📱</button>
+  <button id="duckButton" class="floating-button left" aria-label="ไปหน้าเลือกเพลง">🦆</button>
+  <button id="fullscreenButton" class="floating-button right" aria-label="เปิด/ปิดเต็มจอ">📱</button>
 
   <script src="script.js"></script>
 </body>
