--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>โปรแกรมคำนวนค่าเฉลี่ย Order Picker</title>
+  <!-- โหลด Google Font Kanit -->
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* ตั้งฟอนต์ให้ทั้งหน้าใช้ Kanit */
+    body, input, button, p, h1, h2, h3, h4, h5, h6 {
+      font-family: 'Kanit', sans-serif;
+      font-weight: 400;
+      line-height: 1.5;
+    }
+  </style>
 </head>
 <body>
   <div class="background"></div>
