--- a/average.html
+++ b/average.html
@@ -13,12 +13,12 @@
     <main>
       <h1 class="title-no-wrap">ผลลัพธ์ค่าเฉลี่ย</h1>
       <div id="result-container" class="result-container">
-        <!-- ภาพและข้อความผลลัพธ์จะถูกแทรกที่นี่โดย JS -->
+        <!-- ผลลัพธ์ภาพและข้อความจะแสดงตรงนี้ -->
       </div>
     </main>
   </div>
 
-  <button id="homeButton" class="floating-button right" aria-label="กลับหน้าแรก">🏠</button>
+  <button id="homeButton" class="floating-button left" aria-label="กลับหน้าแรก">🏠</button>
 
   <script src="average-script.js"></script>
 </body>
