--- a/average.html
+++ b/average.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>ผลลัพธ์ค่าเฉลี่ย</title>
   <link rel="stylesheet" href="average-style.css" />
 </head>
@@ -18,7 +18,7 @@
     </main>
   </div>
 
-  <button id="homeButton" class="floating-button left" aria-label="กลับหน้าแรก">🏠</button>
+  <button id="homeButton" class="floating-button right" aria-label="กลับหน้าแรก">🏠</button>
 
   <script src="average-script.js"></script>
 </body>
