--- a/average.html
+++ b/average.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>ผลลัพธ์ค่าเฉลี่ย</title>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Sarabun&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="average-style.css" />
 </head>
 <body>
