--- a/average.html
+++ b/average.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Sarabun&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="average-style.css" />
 </head>
-<body>
+<body style="font-family: 'Kanit', 'Sarabun', sans-serif;">
   <div class="background"></div>
 
   <div class="content-wrapper fade-slide-in">
