--- a/average.html
+++ b/average.html
@@ -19,7 +19,11 @@
     </main>
   </div>
 
+  <!-- ปุ่มกลับหน้าแรก -->
   <button id="homeButton" class="floating-button right" aria-label="กลับหน้าแรก">🏠</button>
+
+  <!-- ✅ ปุ่ม Fullscreen -->
+  <button id="fullscreenButton" class="floating-button left" aria-label="ขยายเต็มจอ">🖥️</button>
 
   <script src="average-script.js"></script>
 </body>
