--- a/songs.html
+++ b/songs.html
@@ -1,24 +1,165 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>เลือกเพลง YouTube</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>📦 โปรแกรมคำนวณ Order ที่ต้องจัด</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;500&display=swap">
+    <style>
+        body {
+            font-family: 'Prompt', sans-serif;
+            text-align: center;
+            padding: 15px;
+            max-width: 100%;
+            margin: auto;
+            background: #121212;
+            color: #E0E0E0;
+        }
+        .container {
+            background: #1E1E1E;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            max-width: 380px;
+            margin: auto;
+            position: relative;
+        }
+        h2 {
+            color: #66BB6A;
+            font-size: 22px;
+        }
+        input {
+            width: 90%;
+            padding: 12px;
+            margin: 8px 0;
+            font-size: 14px;
+            border: 1px solid #424242;
+            background: #2C2C2C;
+            color: white;
+            border-radius: 5px;
+        }
+        button {
+            width: 90%;
+            padding: 12px;
+            background: #26A69A;
+            color: white;
+            border: none;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        button:hover {
+            background: #00796B;
+        }
+        #results {
+            margin-top: 15px;
+            font-size: 16px;
+            font-weight: bold;
+            color: #E0E0E0;
+        }
+        .progress-bar {
+            width: 90%;
+            background: #2C2C2C;
+            border-radius: 5px;
+            overflow: hidden;
+            margin-top: 10px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .progress-bar div {
+            height: 20px;
+            background: #26A69A;
+            text-align: center;
+            color: white;
+            line-height: 20px;
+        }
+        .fullscreen-btn {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            padding: 8px;
+            background: rgba(255, 152, 0, 0.7); /* สีโปร่งแสง */
+            color: white;
+            border: none;
+            font-size: 14px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        .fullscreen-btn:hover {
+            background: rgba(245, 124, 0, 0.9); /* สีเข้มขึ้นเมื่อ hover */
+        }
+    </style>
 </head>
 <body>
-  <div class="background"></div>
-  <main>
-    <h1>เลือกเพลงที่ต้องการฟัง</h1>
-    <button onclick="loadVideo('Jl2GVV5OYfY')">ถ้าคิดถึงเธอมากกว่านี้ x Pimthitiii</button>
-    <button onclick="loadVideo('yqpmX4eOCHo')">หมากเกมนี้ - อินคา</button>
-    <button onclick="loadVideo('HtsXPgf830k')">苏慕遮</button>
-    <button onclick="loadVideo('nNZ5C30d6EE')">Aunchi | เมดเลย์อกหัก</button>
-    <button onclick="loadVideo('VRVFAHidHm8')">Aunchi | เมดเลย์อกหัก EP.2</button>
 
-    <div class="video-container">
-      <iframe id="ytPlayer" src="" allowfullscreen allow="autoplay"></iframe>
+    <div class="container">
+        <h2>📦 โปรแกรมคำนวณ Order ที่ต้องจัด</h2>
+        <p>📅 เดือน: <span id="currentMonth"></span> (มี <span id="totalDays"></span> วัน)</p>
+
+        <label for="totalSKUs">✅ จำนวน SKU ที่ทำได้แล้ว</label>
+        <input type="number" id="totalSKUs" min="0">
+
+        <label for="totalMUs">✅ จำนวน MU ที่ทำได้แล้ว</label>
+        <input type="number" id="totalMUs" min="0">
+
+        <label for="holidays">🚫 จำนวนวันหยุดในเดือนนี้</label>
+        <input type="number" id="holidays" min="0">
+
+        <button onclick="calculateTargets()">🔍 คำนวณ</button>
+
+        <div id="results"></div>
+        <div class="progress-bar">
+            <div id="progressBar" style="width: 0%;">0%</div>
+        </div>
     </div>
+
+    <button class="fullscreen-btn" onclick="toggleFullscreen()">⛶ Fullscreen</button>
+
+    <script>
+        document.getElementById("currentMonth").innerText = new Date().toLocaleString('th-TH', { month: 'long' });
+        let daysInMonth = new Date(new Date().getFullYear(), new Date().getMonth() + 1, 0).getDate();
+        document.getElementById("totalDays").innerText = daysInMonth;
+
+        function calculateTargets() {
+            let totalSKUs = parseInt(document.getElementById("totalSKUs").value) || 0;
+            let totalMUs = parseInt(document.getElementById("totalMUs").value) || 0;
+            let holidays = parseInt(document.getElementById("holidays").value) || 0;
+
+            let today = new Date().getDate();
+            let daysPassed = today - 1;
+            let workingDays = daysInMonth - holidays;
+
+            let totalMonthlySKUs = 120 * daysInMonth;
+            let totalMonthlyMUs = 340 * daysInMonth;
+
+            let remainingDays = workingDays - daysPassed;
+            let remainingSKUsDaily = Math.max(0, (totalMonthlySKUs - totalSKUs) / remainingDays);
+            let remainingMUsDaily = Math.max(0, (totalMonthlyMUs - totalMUs) / remainingDays);
+            let remainingSKUsMonthly = Math.max(0, totalMonthlySKUs - totalSKUs);
+            let remainingMUsMonthly = Math.max(0, totalMonthlyMUs - totalMUs);
+
+            let progress = ((totalSKUs + totalMUs) / (totalMonthlySKUs + totalMonthlyMUs)) * 100;
+            progress = Math.min(progress, 100);
+
+            document.getElementById("results").innerHTML = `
+                <p>📅 จำนวนวันทำงานที่เหลือ: ${remainingDays} วัน</p>
+                <p>📦 วันนี้ต้องทำ: ${remainingSKUsDaily.toFixed(2)} SKU / ${remainingMUsDaily.toFixed(2)} MU</p>
+                <p>📦 เดือนนี้ต้องทำ: ${remainingSKUsMonthly} SKU / ${remainingMUsMonthly} MU</p>
+            `;
+
+            document.getElementById("progressBar").style.width = `${progress.toFixed(2)}%`;
+            document.getElementById("progressBar").innerText = `${progress.toFixed(2)}%`;
+        }
+
+        function toggleFullscreen() {
+            if (!document.fullscreenElement) {
+                document.documentElement.requestFullscreen();
+            } else {
+                document.exitFullscreen();
+            }
+        }
 
     <button class="floating-btn left" onclick="window.location.href='index.html'">🏠</button>
   </main>
