--- a/songs.html
+++ b/songs.html
@@ -28,6 +28,16 @@
             color: #66BB6A;
             font-size: 22px;
         }
+        #currentDate {
+            font-size: 16px;
+            margin-bottom: 5px;
+            color: #FFD54F;
+        }
+        #currentYear {
+            font-size: 16px;
+            margin-bottom: 10px;
+            color: #FFD54F;
+        }
         input {
             width: 90%;
             padding: 12px;
@@ -76,19 +86,24 @@
         }
         .fullscreen-btn {
             position: fixed;
-            bottom: 10px;
-            right: 10px;
-            padding: 8px;
-            background: rgba(255, 152, 0, 0.7); /* สีโปร่งแสง */
+            bottom: 15px;
+            right: 15px;
+            width: 35px;
+            height: 35px;
+            background: rgba(255, 152, 0, 0.3);
             color: white;
             border: none;
-            font-size: 14px;
+            font-size: 16px;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.3);
             transition: background 0.3s;
         }
         .fullscreen-btn:hover {
-            background: rgba(245, 124, 0, 0.9); /* สีเข้มขึ้นเมื่อ hover */
+            background: rgba(245, 124, 0, 0.6);
         }
     </style>
 </head>
@@ -96,6 +111,8 @@
 
     <div class="container">
         <h2>📦 โปรแกรมคำนวณ Order ที่ต้องจัด</h2>
+        <p id="currentDate">⏳ กำลังโหลดวันที่...</p>
+        <p id="currentYear">⏳ กำลังโหลดปี...</p>
         <p>📅 เดือน: <span id="currentMonth"></span> (มี <span id="totalDays"></span> วัน)</p>
 
         <label for="totalSKUs">✅ จำนวน SKU ที่ทำได้แล้ว</label>
@@ -115,9 +132,23 @@
         </div>
     </div>
 
-    <button class="fullscreen-btn" onclick="toggleFullscreen()">⛶ Fullscreen</button>
+    <button class="fullscreen-btn" onclick="toggleFullscreen()">⛶</button>
 
     <script>
+        function updateDateTime() {
+            let now = new Date();
+            let options = { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' };
+            let formattedDate = now.toLocaleString('th-TH', options);
+            let buddhistYear = now.getFullYear() + 543;
+            let christianYear = now.getFullYear();
+
+            document.getElementById("currentDate").innerText = `📅 ${formattedDate}`;
+            document.getElementById("currentYear").innerText = `📅 ค.ศ. ${christianYear} | พ.ศ. ${buddhistYear}`;
+        }
+
+        setInterval(updateDateTime, 1000);
+        updateDateTime();
+
         document.getElementById("currentMonth").innerText = new Date().toLocaleString('th-TH', { month: 'long' });
         let daysInMonth = new Date(new Date().getFullYear(), new Date().getMonth() + 1, 0).getDate();
         document.getElementById("totalDays").innerText = daysInMonth;
