--- a/songs.html
+++ b/songs.html
@@ -4,115 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>📦 โปรแกรมคำนวณ Order ที่ต้องจัด</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;500&display=swap">
-    <style>
-        body {
-            font-family: 'Prompt', sans-serif;
-            text-align: center;
-            padding: 15px;
-            max-width: 100%;
-            margin: auto;
-            background: #121212;
-            color: #E0E0E0;
-        }
-        .container {
-            background: #1E1E1E;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.2);
-            max-width: 380px;
-            margin: auto;
-            position: relative;
-        }
-        h2 {
-            color: #66BB6A;
-            font-size: 22px;
-        }
-        #currentDate {
-            font-size: 16px;
-            margin-bottom: 5px;
-            color: #FFD54F;
-        }
-        #currentYear {
-            font-size: 16px;
-            margin-bottom: 10px;
-            color: #FFD54F;
-        }
-        input {
-            width: 90%;
-            padding: 12px;
-            margin: 8px 0;
-            font-size: 14px;
-            border: 1px solid #424242;
-            background: #2C2C2C;
-            color: white;
-            border-radius: 5px;
-        }
-        button {
-            width: 90%;
-            padding: 12px;
-            background: #26A69A;
-            color: white;
-            border: none;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        button:hover {
-            background: #00796B;
-        }
-        #results {
-            margin-top: 15px;
-            font-size: 16px;
-            font-weight: bold;
-            color: #E0E0E0;
-        }
-        .progress-bar {
-            width: 90%;
-            background: #2C2C2C;
-            border-radius: 5px;
-            overflow: hidden;
-            margin-top: 10px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .progress-bar div {
-            height: 20px;
-            background: #26A69A;
-            text-align: center;
-            color: white;
-            line-height: 20px;
-        }
-        .fullscreen-btn {
-            position: fixed;
-            bottom: 15px;
-            right: 15px;
-            width: 35px;
-            height: 35px;
-            background: rgba(255, 152, 0, 0.3);
-            color: white;
-            border: none;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-            transition: background 0.3s;
-        }
-        .fullscreen-btn:hover {
-            background: rgba(245, 124, 0, 0.6);
-        }
-    </style>
+    <link rel="stylesheet" href="Song-style.css">
 </head>
 <body>
 
     <div class="container">
         <h2>📦 โปรแกรมคำนวณ Order ที่ต้องจัด</h2>
-        <p id="currentDate">⏳ กำลังโหลดวันที่...</p>
-        <p id="currentYear">⏳ กำลังโหลดปี...</p>
+        <p id="currentTime">⏳ กำลังโหลดเวลา...</p>
+        <p id="currentDate">📅 กำลังโหลดวัน...</p>
+        <p id="currentYear">📅 ค.ศ. <span id="yearCE"></span> | พ.ศ. <span id="yearBE"></span></p>
         <p>📅 เดือน: <span id="currentMonth"></span> (มี <span id="totalDays"></span> วัน)</p>
 
         <label for="totalSKUs">✅ จำนวน SKU ที่ทำได้แล้ว</label>
@@ -134,64 +34,7 @@
 
     <button class="fullscreen-btn" onclick="toggleFullscreen()">⛶</button>
 
-    <script>
-        function updateDateTime() {
-            let now = new Date();
-            let options = { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' };
-            let formattedDate = now.toLocaleString('th-TH', options);
-            let buddhistYear = now.getFullYear() + 543;
-            let christianYear = now.getFullYear();
-
-            document.getElementById("currentDate").innerText = `📅 ${formattedDate}`;
-            document.getElementById("currentYear").innerText = `📅 ค.ศ. ${christianYear} | พ.ศ. ${buddhistYear}`;
-        }
-
-        setInterval(updateDateTime, 1000);
-        updateDateTime();
-
-        document.getElementById("currentMonth").innerText = new Date().toLocaleString('th-TH', { month: 'long' });
-        let daysInMonth = new Date(new Date().getFullYear(), new Date().getMonth() + 1, 0).getDate();
-        document.getElementById("totalDays").innerText = daysInMonth;
-
-        function calculateTargets() {
-            let totalSKUs = parseInt(document.getElementById("totalSKUs").value) || 0;
-            let totalMUs = parseInt(document.getElementById("totalMUs").value) || 0;
-            let holidays = parseInt(document.getElementById("holidays").value) || 0;
-
-            let today = new Date().getDate();
-            let daysPassed = today - 1;
-            let workingDays = daysInMonth - holidays;
-
-            let totalMonthlySKUs = 120 * daysInMonth;
-            let totalMonthlyMUs = 340 * daysInMonth;
-
-            let remainingDays = workingDays - daysPassed;
-            let remainingSKUsDaily = Math.max(0, (totalMonthlySKUs - totalSKUs) / remainingDays);
-            let remainingMUsDaily = Math.max(0, (totalMonthlyMUs - totalMUs) / remainingDays);
-            let remainingSKUsMonthly = Math.max(0, totalMonthlySKUs - totalSKUs);
-            let remainingMUsMonthly = Math.max(0, totalMonthlyMUs - totalMUs);
-
-            let progress = ((totalSKUs + totalMUs) / (totalMonthlySKUs + totalMonthlyMUs)) * 100;
-            progress = Math.min(progress, 100);
-
-            document.getElementById("results").innerHTML = `
-                <p>📅 จำนวนวันทำงานที่เหลือ: ${remainingDays} วัน</p>
-                <p>📦 วันนี้ต้องทำ: ${remainingSKUsDaily.toFixed(2)} SKU / ${remainingMUsDaily.toFixed(2)} MU</p>
-                <p>📦 เดือนนี้ต้องทำ: ${remainingSKUsMonthly} SKU / ${remainingMUsMonthly} MU</p>
-            `;
-
-            document.getElementById("progressBar").style.width = `${progress.toFixed(2)}%`;
-            document.getElementById("progressBar").innerText = `${progress.toFixed(2)}%`;
-        }
-
-        function toggleFullscreen() {
-            if (!document.fullscreenElement) {
-                document.documentElement.requestFullscreen();
-            } else {
-                document.exitFullscreen();
-            }
-        }
-    </script>
+    <script src="Song-script.js"></script>
 
 </body>
 </html>
