--- a/songs.html
+++ b/songs.html
@@ -10,8 +10,7 @@
 
     <div class="container">
         <h2>📦 โปรแกรมคำนวณ Order ที่ต้องจัด</h2>
-        <p id="currentTime">⏳ กำลังโหลดเวลา...</p>
-        <p id="currentDate">📅 กำลังโหลดวัน...</p>
+        <p id="currentDateTime">⏳ กำลังโหลด...</p>
         <p id="currentYear">📅 ค.ศ. <span id="yearCE"></span> | พ.ศ. <span id="yearBE"></span></p>
         <p>📅 เดือน: <span id="currentMonth"></span> (มี <span id="totalDays"></span> วัน)</p>
 
@@ -33,6 +32,7 @@
     </div>
 
     <button class="fullscreen-btn" onclick="toggleFullscreen()">⛶</button>
+    <button class="back-btn" onclick="goToIndex()">🏠</button>
 
     <script src="Song-script.js"></script>
 
