--- a/songs.html
+++ b/songs.html
@@ -20,15 +20,15 @@
 
             <div class="input-clear-wrapper">
                 <input type="number" id="totalSKUs" placeholder="✅ จำนวน SKU ที่ทำได้แล้ว" min="0">
-                <button type="button" class="clear-btn" aria-label="ลบค่าจำนวน SKU" data-target="totalSKUs">×</button>
+                <button type="button" class="clear-btn" aria-label="ลบค่าจำนวน SKU" data-target="totalSKUs">✖</button>
             </div>
             <div class="input-clear-wrapper">
                 <input type="number" id="totalMUs" placeholder="✅ จำนวน MU ที่ทำได้แล้ว" min="0">
-                <button type="button" class="clear-btn" aria-label="ลบค่าจำนวน MU" data-target="totalMUs">×</button>
+                <button type="button" class="clear-btn" aria-label="ลบค่าจำนวน MU" data-target="totalMUs">✖</button>
             </div>
             <div class="input-clear-wrapper">
                 <input type="number" id="holidays" placeholder="🚫 จำนวนวันหยุดในเดือนนี้" min="0">
-                <button type="button" class="clear-btn" aria-label="ลบค่าจำนวนวันหยุด" data-target="holidays">×</button>
+                <button type="button" class="clear-btn" aria-label="ลบค่าจำนวนวันหยุด" data-target="holidays">✖</button>
             </div>
             
             <button onclick="calculateTargets()">🔍 คำนวณ</button>
