--- a/songs.html
+++ b/songs.html
@@ -13,7 +13,7 @@
 
     <div class="content-wrapper fade-slide-in">
         <main>
-            <h1 class="title-no-wrap">📦 โปรแกรมคำนวณ Order ที่ต้องจัด</h1>
+            <h1 class="title-resize">📦 โปรแกรมคำนวณ Order ที่ต้องจัด</h1>
             <p id="currentDateTime">⏳ กำลังโหลด...</p>
             <p id="currentYear">📅 ค.ศ. <span id="yearCE"></span> | พ.ศ. <span id="yearBE"></span></p>
             <p>📅 เดือน: <span id="currentMonth"></span> (มี <span id="totalDays"></span> วัน)</p>
