--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>โปรแกรมคำนวณค่าเฉลี่ย Order Picker</title>
-  <!-- โหลด Google Font Kanit -->
   <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <style>
@@ -51,6 +50,19 @@
       transform: translateY(-2px);
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
     }
+    /* สไตล์ใหม่สำหรับ footer */
+    footer {
+      margin-top: 3em;
+      padding: 1.5em;
+      text-align: center;
+      font-size: 1em;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 12px;
+    }
+    footer p {
+      margin: 0.8em 0;
+      color: #ddd;
+    }
   </style>
 </head>
 <body>
@@ -74,6 +86,7 @@
     </main>
 
     <footer>
+      <p>เครื่องมือช่วยคำนวณค่าเฉลี่ยสำหรับ Order Picker</p>
       <p>พัฒนาโดย Jack Makro © 2025 | ติดต่อ: P'Jack OCS Lock 12</p>
     </footer>
   </div>
